--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "12-employee-tracker",
-  "version": "1.0.0",
-  "description": "A command-line application built from scratch to manage a company's employee database, using Node.js, Inquirer, and MySQL.",
-  "main": "index.js",
-  "scripts": {
-    "start": "node src/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/faisal244/employee-tracker.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/faisal244/employee-tracker/issues"
-  },
-  "homepage": "https://github.com/faisal244/employee-tracker#readme",
-  "dependencies": {
-    "console.table": "^0.10.0",
-    "inquirer": "^9.0.0",
-    "mysql2": "^2.3.3"
-  }
+	"name": "12-employee-tracker",
+	"version": "1.0.0",
+	"description": "A command-line application built from scratch to manage a company's employee database, using Node.js, Inquirer, and MySQL.",
+	"main": "index.js",
+	"scripts": {
+		"dev": "nodemon src/index.js",
+		"start": "node src/index.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/faisal244/employee-tracker.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/faisal244/employee-tracker/issues"
+	},
+	"homepage": "https://github.com/faisal244/employee-tracker#readme",
+	"devDependencies": {
+		"nodemon": "^1.3.3"
+	},
+	"dependencies": {
+		"dotenv": "^16.0.1",
+		"inquirer": "^8.0.0",
+		"mysql2": "^2.3.3"
+	}
 }
