--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "nodemon src/index.js",
+		"seed": "node src/lib/seed.js",
 		"start": "node src/index.js"
 	},
 	"repository": {
@@ -18,12 +19,13 @@
 		"url": "https://github.com/faisal244/employee-tracker/issues"
 	},
 	"homepage": "https://github.com/faisal244/employee-tracker#readme",
-	"devDependencies": {
-		"nodemon": "^1.3.3"
-	},
 	"dependencies": {
 		"dotenv": "^16.0.1",
 		"inquirer": "^8.0.0",
-		"mysql2": "^2.3.3"
+		"mysql2": "^2.3.3",
+		"table": "^6.8.0"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.18"
 	}
 }
