--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 	"homepage": "https://github.com/faisal244/employee-tracker#readme",
 	"dependencies": {
 		"dotenv": "^16.0.1",
+		"figlet": "^1.5.2",
+		"gradient-string": "^2.0.1",
 		"inquirer": "^8.0.0",
 		"mysql2": "^2.3.3",
 		"table": "^6.8.0"
